--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "daisyui": "^1.25.4",
+    "@apollo/client": "^3.5.9",
+    "daisyui": "^2.1.0",
+    "dayjs": "^1.10.7",
     "framer-motion": "^6.2.4",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -20,6 +24,7 @@
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
     "react-icons": "^4.3.1",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.18",
+    "theme-change": "^2.0.2"
   }
 }
